# github-actions-devops-ci-cd

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Ci-App-quality-checks.yml  Ci-App.yml  Ci-library-quality-checks.yml  Library-tests.yml  build-and-test-app.yml  build-and-test-lib.yml  build-and-test.yml  ci-library.yml  ci-matrix.yml
Application/: CMakeLists.txt  main.cpp
Application/include/: main.h
Application/src/: main.cpp
Application/tests/: CMakeLists.txt  test_main.cpp
cmake/: CompilerWarnings.cmake
hotel_lib/: CMakeLists.txt
hotel_lib/include/: Hotel.h  HotelRoom.h  Reservation.h
hotel_lib/src/: Hotel.cpp  HotelRoom.cpp
hotel_lib/tests/: CMakeLists.txt  hotel_room_exception_tests.cpp  hotel_room_reservation_no_overlap.cpp  hotel_room_reservation_overlap.cpp  hotel_room_sorted_insertion.cpp
tests/: CMakeLists.txt
